--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.20.0",
     "clash-of-clans-api": "^0.6.3",
     "cls-bluebird": "^2.1.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
