--- a/firebase.json
+++ b/firebase.json
@@ -1,26 +1,26 @@
 {
-  "functions": {
-    "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint",
-      "npm --prefix \"$RESOURCE_DIR\" run build"
-    ],
-    "source": "functions"
-  },
-  "hosting": {
-    "public": "build",
-    "predeploy": [
-      "npm run build"
-    ],
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
-  }
+   "functions": {
+      "predeploy": [
+         "npm --prefix \"$RESOURCE_DIR\" run lint",
+         "npm --prefix \"$RESOURCE_DIR\" run build"
+      ],
+      "source": "functions"
+   },
+   "hosting": {
+      "public": "build",
+      "predeploy": [
+         "yarn build"
+      ],
+      "ignore": [
+         "firebase.json",
+         "**/.*",
+         "**/node_modules/**"
+      ],
+      "rewrites": [
+         {
+            "source": "**",
+            "destination": "/index.html"
+         }
+      ]
+   }
 }
