--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,11 +14,10 @@ jobs:
            uses: actions/setup-node@v1
            with:
               node-version: 13.x
+         - name: Install Firebase Tools
+           run: |
+              npm i -g firebase-tools
          - name: Install Dependencies
            run: yarn
-         - name: deploy...
-           uses: w9jds/firebase-action@master
-           with:
-              args: deploy --project clashamigos --only hosting
-           env:
-              FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+         - name: Deploying App
+           run: firebase deploy --project clashamigos --only hosting --token ${{ secrets.FIREBASE_TOKEN }}
